cambie de color a un petalo a color rojo

--- a/style.css
+++ b/style.css
@@ -139,7 +139,7 @@ body{
     width: 8vmin;
     height: 10vmin;
     bottom: 2vmin;
-    background-color: #decd11;
+    background-color: red;
 }
 
 .f-wrapper--2 .flower__leaf--1{
