se cambio el color de un petalo a naranja

--- a/style.css
+++ b/style.css
@@ -146,7 +146,7 @@ body{
     width: 8vmin;
     height: 10vmin;
     bottom: 2vmin;
-    background-color: #decd11;
+    background-color: orange;
 }
 
 .f-wrapper--2 .f .flower__leaf--8{
